# data-versioning-workshop

./: .gitignore  pyproject.toml
.dvc/: config
data/: data.parquet.dvc  df_test.parquet.dvc  df_train.parquet.dvc
data_versioning_workshop/notebooks/: data_versioning.ipynb
data_versioning_workshop/notebooks/.ipynb_checkpoints/: data_versioning-checkpoint.ipynb
metrics/: accuracy.json.dvc
models/: model.pkl.dvc
tests/: test_data_versioning_workshop.py
