[tool.poetry]
name = "data-versioning-workshop"
version = "0.1.0"
description = ""
authors = ["davidesanna <davide.sanna@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
dvc = "^2.9.5"
pandas = "^1.4.1"
jupyter = "^1.0.0"
ipykernel = "^6.9.2"
jupyterlab = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
